Update 'backend-tests-go-zpgvahmy' component image to: quay.io/rhtap_qe/backend-tests-go-zpgvahmy:5e1b2fdbe07f64f94fe641375e93a4f6183ee582@sha256:1c9582c4595c17af0e479c67e0f6af9f00be7230d92730b137e07f05f64c624c

--- a/components/backend-tests-go-zpgvahmy/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-zpgvahmy/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-zpgvahmy
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-zpgvahmy:5e1b2fdbe07f64f94fe641375e93a4f6183ee582@sha256:1c9582c4595c17af0e479c67e0f6af9f00be7230d92730b137e07f05f64c624c
+          name: container-image
